improving swagger docs
