# app/Http/Controllers/ReorderTaskController.php
@@ -109,6 +109,17 @@ class ReorderTaskController extends Controller
      *         )
      *     ),
      *
+     *  *     @OA\Response(
+     *         response=404,
+     *         description="Task not found",
+     *
+     *         @OA\JsonContent(
+     *
+     *             @OA\Property(property="message", type="string", example="No query results for model [App\\Models\\Task] 123"),
+     *             @OA\Property(property="exception", type="string", example="Symfony\\Component\\HttpKernel\\Exception\\NotFoundHttpException")
+     *         )
+     *     ),
+     *
      *     @OA\Response(
      *         response=500,
      *         description="Internal error while reordering task",
